<resources>
    <string name="app_name">Money Manager</string>

<!-- Back4app & Parse service -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">RXb5TqfFxjO9QueIF0Mz5Lw8MfAys6JghDmqGfH3</string>
    <string name="back4app_client_key">ceXYMxtoFOq5yLc2M2aGxOieNDz7uTCb5TK4bS9G</string>

<!-- Sign up and Log in -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">E-mail address</string>

<!-- Summary -->
    <string name="add_a_new_position">Add a new position</string>
    <string name="logout">Log out</string>
    <string name="price_example">100.0USD</string>
    <string name="quantity_example">10</string>
    <string name="profit_example">7.53%</string>
    <string name="position_name_example">AAPL</string>
    <string name="position_description_example">APPLE INC</string>
    <string name="position_name">Position name</string>
    <string name="prices">"Current price/\nBuy price"</string>

<!-- Search -->
    <string name="search">Search</string>
    <string name="symbol_hint_example">ERROR_OCCURRED</string>
    <string name="quantity">Quantity</string>

<!-- Add position -->
    <string name="add_position">Add position</string>
    <string name="buy_price">"Buy price"</string>
    <string name="current_price">"Current price"</string>

<!-- Error messages -->
    <string name="not_implemented_error_message">Option not implemented yet. Please, contact us.</string>
    <string name="profit">Profit</string>

    <!-- To be categorized -->
</resources>