<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lswitaj.moneymanager.authorisation.signup.SignUpViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/email_input"
                    style="@style/ShortText"
                    android:layout_marginTop="@dimen/first_margin_top"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/username_input"
                    style="@style/ShortText"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.username}"
                    app:layout_constraintEnd_toEndOf="@id/email_input"
                    app:layout_constraintStart_toStartOf="@id/email_input"
                    app:layout_constraintTop_toBottomOf="@id/email_input" />

                <EditText
                    android:id="@+id/password_input"
                    style="@style/ShortText"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    app:layout_constraintEnd_toEndOf="@id/email_input"
                    app:layout_constraintStart_toStartOf="@id/email_input"
                    app:layout_constraintTop_toBottomOf="@id/username_input" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_button"
                    style="@style/PrimaryButton"
                    android:onClick="@{() -> viewModel.onSignUpButtonClicked()}"
                    android:text="@string/sign_up"
                    app:layout_constraintEnd_toEndOf="@id/email_input"
                    app:layout_constraintStart_toStartOf="@id/email_input"
                    app:layout_constraintTop_toBottomOf="@id/password_input" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>